	PR java/23620 	* class.c (make_class): Create empty binfo here. 	(set_super_info): Only create binfo if we have superclasses.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@105399 138bc75d-0d04-0410-961f-82ee72b054a4